# greentic-component

./: Cargo.toml  README.md
.codex/done/: PR-01-old.md
.github/actions/rust-setup/: action.yml
ci/: local_check.sh
crates/component-manifest/: Cargo.toml
crates/greentic-component/: Cargo.toml
crates/greentic-component-runtime/: Cargo.toml
crates/greentic-component-store/: Cargo.toml
crates/greentic-component/assets/templates/component/rust-wasi-p2-min/: component.manifest.json.hbs
crates/greentic-component/schemas/v1/: component.manifest.schema.json
crates/greentic-component/src/wizard/: mod.rs
crates/greentic-component/tests/: wizard_tests.rs
crates/greentic-component/tests/contract/fixtures/component_v0_6_0/: component.manifest.json
crates/greentic-component/tests/snapshots/: new_scaffold__scaffold_manifest.snap
demo_component/: component.manifest.json
