[workspace]
members = [
    "crates/greentic-component",
    "crates/component-manifest",
    "crates/greentic-component-store",
    "crates/greentic-component-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.69"
license = "MIT"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
assert_fs = "1"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
bytes = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
greentic-component-manifest = { version = "0.4", path = "crates/component-manifest" }
greentic-component-store = { version = "0.4",path = "crates/greentic-component-store" }
dashmap = "6"
directories = "6"
displaydoc = "0.2"
futures = "0.3"
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-v0-6"] }
greentic-interfaces-host = "0.4"
greentic-interfaces = { version = "0.4", default-features = false, features = [
    "bindings-rust",
    "common-types-v0-1",
    "component-v1",
    "component-v0-6",
    "component-v0-5",
    "component-v0-4",
    "describe-v1",
    "provision-v0-1",
    "types-core-v0-4",
    "types-core-v0-2",
    "wasix-mcp-v0-0-5",
    "wasix-mcp-24-11-05",
    "wasix-mcp-25-03-26",
    "wasix-mcp-25-06-18",
    "secrets-store-v1",
    "state-store-v1",
    "source-v1",
    "build-v1",
    "scan-v1",
    "signing-v1",
    "attestation-v1",
    "policy-v1",
    "metadata-v1",
    "distributor-api",
    "distributor-api-v1-1",
    "distribution-v1",
    "oci-v1",
    "http-client-v1",
    "http-client-v1-1",
    "telemetry-logger-v1",
    "repo-ui-actions-v1",
    "worker-api",
    "provider-common",
    "provider-core-v1",
    "oauth-broker-v1",
    "gui-fragment",
    "runner-host-v1",
] }
greentic-interfaces-wasmtime = "0.4"
greentic-distributor-client = { version = "0.4", default-features = false, features = ["dist-client"] }
greentic-types = "0.4"
greentic-qa-lib = "0.4"
handlebars = "6"
hex = "0.4"
ignore = "0.4"
include_dir = { version = "0.7" }
insta = { version = "1", features = ["glob", "json"] }
jsonschema = "0.44"
miette = { version = "7", default-features = false, features = ["derive"] }
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
once_cell = "1"
pathdiff = "0.2"
percent-encoding = "2"
predicates = "3"
proptest = "1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "blocking"] }
schemars = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
sha2 = "0.10"
sys-locale = "0.3"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "time", "io-util"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
unic-langid = "0.9"
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
wasm-encoder = "0"
wasm-metadata = "0"
wasmparser = "0"
wasmtime = { version = "42", default-features = false, features = ["component-model", "cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "42" }
wit-component = "0.245"
wit-parser = "0.245"
