[package]
name = "greentic-component-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Manifest validation helpers for Greentic components"
repository = "https://github.com/greenticai/greentic-component"
homepage = "https://github.com/greenticai/greentic-component"
documentation = "https://github.com/greenticai/greentic-component"
keywords = ["greentic", "component", "manifest"]
categories = ["wasm"]

[lib]
name = "component_manifest"

[features]
default = []
serde = []

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
url.workspace = true
regex.workspace = true
semver.workspace = true
jsonschema.workspace = true
greentic-types.workspace = true

[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true

