[package]
name = "greentic-component-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description = "Store abstraction and verification for Greentic components"
repository = "https://github.com/greenticai/greentic-component"
homepage = "https://github.com/greenticai/greentic-component"
documentation = "https://github.com/greenticai/greentic-component"
keywords = ["greentic", "component", "store"]
categories = ["wasm"]

[features]
default = ["http", "fs"]
fs = []
http = ["dep:reqwest"]
oci = []
warg = []
serde = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
percent-encoding.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }

