[package]
name = "greentic-component"
version.workspace=true
edition = "2024"
rust-version = "1.91"
default-run = "greentic-component"
license = "MIT"
description = "High-level component loader and store for Greentic components"
repository = "https://github.com/greenticai/greentic-component"
homepage = "https://github.com/greenticai/greentic-component"
documentation = "https://docs.rs/greentic-component"
keywords = ["greentic", "component", "wasm"]
categories = ["wasm"]
include = [
    "Cargo.toml",
    "assets/**",
    "examples/**",
    "i18n/**",
    "schemas/**",
    "src/**",
    "tests/**",
]

[lib]
path = "src/lib.rs"

[features]
default = ["oci", "cli", "store"]
oci = ["dep:oci-distribution"]
schema = ["dep:schemars"]
abi = ["dep:wit-component", "dep:wit-parser", "dep:wasmparser"]
describe = ["abi"]
loader = ["describe"]
prepare = ["loader", "dep:dashmap"]
cli = [
    "prepare",
    "dep:clap",
    "dep:include_dir",
    "dep:handlebars",
    "dep:walkdir",
    "dep:tempfile",
    "dep:miette",
    "dep:wasmtime",
    "dep:greentic-interfaces",
    "dep:greentic-interfaces-host",
    "dep:greentic-interfaces-wasmtime",
    "dep:wasmtime-wasi",
    "dep:uuid",
    "dep:base64",
    "dep:reqwest",
    "dep:greentic-qa-lib",
    "dep:sys-locale",
    "dep:unic-langid",
]
store = ["dep:greentic-distributor-client"]
fuzz = ["dep:proptest"]

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
clap = { workspace = true, optional = true }
directories = { workspace = true }
hex = { workspace = true }
ignore = { workspace = true }
include_dir = { workspace = true, optional = true }
handlebars = { workspace = true, optional = true }
miette = { workspace = true, optional = true }
jsonschema = { workspace = true }
greentic-component-manifest = { workspace = true }
oci-distribution = { workspace = true, optional = true }
once_cell = { workspace = true }
pathdiff = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }
base64 = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
wit-component = { workspace = true, optional = true }
wit-parser = { workspace = true, optional = true }
wasmparser = { workspace = true, optional = true }
wasm-metadata = { workspace = true }
greentic-types = { workspace = true }
greentic-qa-lib = { workspace = true, optional = true }
greentic-interfaces = { workspace = true, optional = true }
greentic-interfaces-host = { workspace = true, optional = true }
greentic-interfaces-wasmtime = { workspace = true, optional = true }
greentic-distributor-client = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
toml = { workspace = true }
sys-locale = { workspace = true, optional = true }
unic-langid = { workspace = true, optional = true }

[dev-dependencies]
assert_fs = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
wasm-encoder = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
greentic-interfaces-guest = { workspace = true }

[[example]]
name = "gen_fixture"
required-features = ["abi"]

[[example]]
name = "gen_contract_fixture"
required-features = ["abi"]

